Debugger: Fix #11459.

- When saving our view state, only save a new set of values if a stack
  frame clear is pending. Otherwise, check if there is a previously
  existing view state, and take over its values. This ensures that we
  correctly remember our previous values when the user is simply switching
  stack frames while in a stopped state.